@@ -15,59 +15,10 @@
  */
 package org.multibit.viewsystem.swing.view.panels;
 
-import java.awt.BorderLayout;
-import java.awt.Color;
-import java.awt.Component;
-import java.awt.ComponentOrientation;
-import java.awt.Dimension;
-import java.awt.Font;
-import java.awt.FontMetrics;
-import java.awt.Graphics2D;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.SystemColor;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
-import java.awt.event.FocusEvent;
-import java.awt.event.FocusListener;
-import java.awt.event.ItemEvent;
-import java.awt.event.ItemListener;
-import java.awt.image.BufferedImage;
-import java.io.IOException;
-import java.math.BigDecimal;
-import java.math.BigInteger;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.util.Collection;
-import java.util.SortedSet;
-import java.util.TreeSet;
-
-import javax.swing.BorderFactory;
-import javax.swing.ButtonGroup;
-import javax.swing.Icon;
-import javax.swing.ImageIcon;
-import javax.swing.JCheckBox;
-import javax.swing.JComboBox;
-import javax.swing.JLabel;
-import javax.swing.JList;
-import javax.swing.JOptionPane;
-import javax.swing.JPanel;
-import javax.swing.JRadioButton;
-import javax.swing.JScrollPane;
-import javax.swing.ListCellRenderer;
-import javax.swing.UIManager;
-import javax.swing.UIManager.LookAndFeelInfo;
-
-import org.joda.money.Money;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import org.multibit.controller.Controller;
 import org.multibit.controller.bitcoin.BitcoinController;
 import org.multibit.controller.exchange.ExchangeController;
 import org.multibit.exchange.CurrencyConverter;
-import org.multibit.exchange.CurrencyConverterResult;
 import org.multibit.exchange.TickerTimerTask;
 import org.multibit.message.Message;
 import org.multibit.message.MessageManager;
@@ -84,14 +35,25 @@ import org.multibit.viewsystem.dataproviders.PreferencesDataProvider;
 import org.multibit.viewsystem.swing.ColorAndFontConstants;
 import org.multibit.viewsystem.swing.MultiBitFrame;
 import org.multibit.viewsystem.swing.action.ChooseFontAction;
+import org.multibit.viewsystem.swing.action.HelpContextAction;
 import org.multibit.viewsystem.swing.action.ShowPreferencesSubmitAction;
 import org.multibit.viewsystem.swing.action.UndoPreferencesChangesSubmitAction;
-import org.multibit.viewsystem.swing.view.components.FontSizer;
-import org.multibit.viewsystem.swing.view.components.MultiBitButton;
-import org.multibit.viewsystem.swing.view.components.MultiBitLabel;
-import org.multibit.viewsystem.swing.view.components.MultiBitTextField;
-import org.multibit.viewsystem.swing.view.components.MultiBitTitledPanel;
+import org.multibit.viewsystem.swing.view.components.*;
 import org.multibit.viewsystem.swing.view.ticker.TickerTableModel;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import javax.swing.*;
+import javax.swing.UIManager.LookAndFeelInfo;
+import java.awt.*;
+import java.awt.event.*;
+import java.awt.image.BufferedImage;
+import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.Collection;
+import java.util.SortedSet;
+import java.util.TreeSet;
 
 /**
  * The show preferences view.
@@ -99,8 +61,6 @@ import org.multibit.viewsystem.swing.view.ticker.TickerTableModel;
 public class ShowPreferencesPanel extends JPanel implements Viewable, PreferencesDataProvider {
     private static final Logger log = LoggerFactory.getLogger(ShowPreferencesPanel.class);
 
-    public static String UNPARSEABLE_FEE = "UNPARSEABLE_FEE";
-    
     private static final int LANGUAGE_CODE_VERTICAL_INSET = 2;
 
     private static final int LANGUAGE_CODE_IMAGE_HEIGHT = 20;
@@ -116,9 +76,6 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
     private static final int EXCHANGE_COMBO_HEIGHT_DELTA = 15;
     private static final int COMBO_WIDTH_DELTA = 150;
 
-//    private static final int FEE_TEXT_FIELD_HEIGHT = 30;
-//    private static final int FEE_TEXT_FIELD_WIDTH = 200;
-
     private static final int API_CODE_FIELD_HEIGHT = 30;
     private static final int API_CODE_FIELD_WIDTH = 200;
 
@@ -132,9 +89,6 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
 
     private JRadioButton useDefaultLocale;
     private JComboBox languageComboBox;
-
-//    private MultiBitTextField feeTextField;
-//    private String originalFee;
 
     private JRadioButton ignoreAll;
     private JRadioButton fillAutomatically;
@@ -238,41 +192,6 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
                 controller.getModel().getUserPreference(ExchangeModel.SHOW_BITCOIN_CONVERTED_TO_FIAT));
         showBitcoinConvertedToFiat.setSelected(originalShowBitcoinConvertedToFiat);
 
-//        String sendFeeString = controller.getModel().getUserPreference(BitcoinModel.SEND_FEE);
-//
-//        if (sendFeeString == null || sendFeeString == "") {
-//            sendFeeString = controller.getLocaliser()
-//                    .bitcoinValueToStringNotLocalised(BitcoinModel.SEND_FEE_DEFAULT, false, false);
-//        }
-//        originalFee = sendFeeString;
-//
-//        String sendFeeStringLocalised;
-//        CurrencyConverterResult converterResult = CurrencyConverter.INSTANCE.parseToBTCNotLocalised(sendFeeString);
-//
-//        if (converterResult.isBtcMoneyValid()) {
-//            // Check that the fee is at least the minimum fee and smaller than the maximum fee.
-//            BigInteger feeAsBigInteger = converterResult.getBtcMoney().getAmount().toBigInteger();
-//            if (feeAsBigInteger.compareTo(BitcoinModel.SEND_MINIMUM_FEE) < 0) {
-//                // Set the fee to the default fee.
-//                sendFeeStringLocalised = CurrencyConverter.INSTANCE.getBTCAsLocalisedString(
-//                        Money.of(CurrencyConverter.INSTANCE.BITCOIN_CURRENCY_UNIT, new BigDecimal(BitcoinModel.SEND_FEE_DEFAULT)));
-//
-//            } else {
-//                if (feeAsBigInteger.compareTo(BitcoinModel.SEND_MAXIMUM_FEE) >= 0) {
-//                    // Set the fee to the default fee.
-//                    sendFeeStringLocalised = CurrencyConverter.INSTANCE.getBTCAsLocalisedString(
-//                            Money.of(CurrencyConverter.INSTANCE.BITCOIN_CURRENCY_UNIT, new BigDecimal(BitcoinModel.SEND_FEE_DEFAULT)));
-//                } else {
-//                    // Fee is ok.
-//                    sendFeeStringLocalised = CurrencyConverter.INSTANCE.getBTCAsLocalisedString(converterResult.getBtcMoney());
-//                }
-//            }
-//        } else {
-//            // BTC did not parse - just use the original text
-//            sendFeeStringLocalised = sendFeeString;
-//        }
-//        feeTextField.setText(sendFeeStringLocalised);
-
         String showDialogString = controller.getModel().getUserPreference(BitcoinModel.OPEN_URI_SHOW_DIALOG);
         String useUriString = controller.getModel().getUserPreference(BitcoinModel.OPEN_URI_USE_URI);
 
@@ -281,10 +200,10 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
             askEveryTime.setSelected(true);
         } else {
             if (!(Boolean.FALSE.toString().equalsIgnoreCase(useUriString))) {
-                // missing useUri or it is set to true
+                // Missing useUri or it is set to true.
                 fillAutomatically.setSelected(true);
             } else {
-                // useUri set to false
+                // useUri set to false.
                 ignoreAll.setSelected(true);
             }
         }
@@ -365,15 +284,6 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
         GridBagConstraints constraints = new GridBagConstraints();
         mainPanel.setLayout(new GridBagLayout());
 
-//        constraints.fill = GridBagConstraints.HORIZONTAL;
-//        constraints.gridx = 0;
-//        constraints.gridy = 0;
-//        constraints.gridwidth = 2;
-//        constraints.weightx = 1;
-//        constraints.weighty = 1;
-//        constraints.anchor = GridBagConstraints.ABOVE_BASELINE_LEADING;
-//        mainPanel.add(createFeePanel(stentWidth), constraints);
-
         constraints.fill = GridBagConstraints.HORIZONTAL;
         constraints.gridx = 0;
         constraints.gridy = 1;
@@ -437,7 +347,7 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
     }
 
     private JPanel createLanguagePanel(int stentWidth) {
-        // language radios
+        // Language radios.
         MultiBitTitledPanel languagePanel = new MultiBitTitledPanel(controller.getLocaliser().getString(
                 "showPreferencesPanel.languageTitle"), ComponentOrientation.getOrientation(controller.getLocaliser().getLocale()));
 
@@ -506,10 +416,10 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
         constraints.anchor = GridBagConstraints.LINE_START;
         languagePanel.add(useSpecific, constraints);
 
-        // language combo box
+        // Language combo box.
         int numberOfLanguages = Integer.parseInt(controller.getLocaliser().getString("showPreferencesPanel.numberOfLanguages"));
 
-        // languages are added to the combo box in alphabetic order
+        // Languages are added to the combo box in alphabetic order.
         languageDataSet = new TreeSet<LanguageData>();
 
         for (int i = 0; i < numberOfLanguages; i++) {
@@ -543,7 +453,7 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
 
         languageComboBox.setRenderer(renderer);
 
-        // get the languageCode value stored in the model
+        // Get the languageCode value stored in the model.
         String userLanguageCode = controller.getModel().getUserPreference(CoreModel.USER_LANGUAGE_CODE);
         if (userLanguageCode == null || CoreModel.USER_LANGUAGE_IS_DEFAULT.equals(userLanguageCode)) {
             useDefaultLocale.setSelected(true);
@@ -560,12 +470,12 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
                 startingIndex++;
             }
             if (languageCodeIndex != 0) {
-                languageComboBox.setSelectedItem(languageCodeIndex.intValue());
+                languageComboBox.setSelectedItem(languageCodeIndex);
                 languageComboBox.setEnabled(true);
             }
         }
 
-        // store original value for use by submit action
+        // Store original value for use by submit action.
         originalUserLanguageCode = userLanguageCode;
 
         constraints.fill = GridBagConstraints.NONE;
@@ -590,110 +500,6 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
 
         return languagePanel;
     }
-
-//    private JPanel createFeePanel(int stentWidth) {
-//        MultiBitTitledPanel feePanel = new MultiBitTitledPanel(
-//                controller.getLocaliser().getString("showPreferencesPanel.feeTitle"),
-//                ComponentOrientation.getOrientation(controller.getLocaliser().getLocale()));
-//
-//        GridBagConstraints constraints = new GridBagConstraints();
-//
-//        constraints.fill = GridBagConstraints.BOTH;
-//        constraints.gridx = 0;
-//        constraints.gridy = 3;
-//        constraints.weightx = 0.1;
-//        constraints.weighty = 0.05;
-//        constraints.gridwidth = 1;
-//        constraints.gridheight = 1;
-//        constraints.anchor = GridBagConstraints.LINE_START;
-//        JPanel indent = MultiBitTitledPanel.getIndentPanel(1);
-//        feePanel.add(indent, constraints);
-//
-//        constraints.fill = GridBagConstraints.BOTH;
-//        constraints.gridx = 1;
-//        constraints.gridy = 3;
-//        constraints.weightx = 0.3;
-//        constraints.weighty = 0.3;
-//        constraints.gridwidth = 1;
-//        constraints.anchor = GridBagConstraints.LINE_START;
-//        JPanel stent = MultiBitTitledPanel.createStent(stentWidth);
-//        feePanel.add(stent, constraints);
-//
-//        constraints.fill = GridBagConstraints.BOTH;
-//        constraints.gridx = 2;
-//        constraints.gridy = 3;
-//        constraints.weightx = 0.05;
-//        constraints.weighty = 0.3;
-//        constraints.gridwidth = 1;
-//        constraints.anchor = GridBagConstraints.CENTER;
-//        feePanel.add(MultiBitTitledPanel.createStent(MultiBitTitledPanel.SEPARATION_BETWEEN_NAME_VALUE_PAIRS), constraints);
-//
-//        MultiBitLabel feeLabel = new MultiBitLabel(controller.getLocaliser().getString("showPreferencesPanel.feeLabel.text"));
-//        feeLabel.setToolTipText(HelpContentsPanel.createTooltipText(controller.getLocaliser().getString("showPreferencesPanel.feeLabel.tooltip")));
-//        MultiBitLabel feeCurrencyLabel = new MultiBitLabel("BTC");
-//
-//        String sendFeeString = controller.getModel().getUserPreference(BitcoinModel.SEND_FEE);
-//
-//        if (sendFeeString == null || sendFeeString == "") {
-//            sendFeeString = controller.getLocaliser().bitcoinValueToString(BitcoinModel.SEND_FEE_DEFAULT, false, false);
-//        }
-//        originalFee = sendFeeString;
-//
-//        String sendFeeStringLocalised;
-//        CurrencyConverterResult converterResult = CurrencyConverter.INSTANCE.parseToBTCNotLocalised(sendFeeString);
-//
-//        if (converterResult.isBtcMoneyValid()) {
-//            sendFeeStringLocalised = CurrencyConverter.INSTANCE.getBTCAsLocalisedString(converterResult.getBtcMoney());
-//        } else {
-//            // BTC did not parse - just use the original text
-//            sendFeeStringLocalised = sendFeeString;
-//        }
-//
-//        feeTextField = new MultiBitTextField("", 10, controller);
-//        feeTextField.setHorizontalAlignment(JLabel.TRAILING);
-//        feeTextField.setMinimumSize(new Dimension(FEE_TEXT_FIELD_WIDTH, FEE_TEXT_FIELD_HEIGHT));
-//        feeTextField.setPreferredSize(new Dimension(FEE_TEXT_FIELD_WIDTH, FEE_TEXT_FIELD_HEIGHT));
-//        feeTextField.setMaximumSize(new Dimension(FEE_TEXT_FIELD_WIDTH, FEE_TEXT_FIELD_HEIGHT));
-//
-//        feeTextField.setText(sendFeeStringLocalised);
-//        constraints.fill = GridBagConstraints.NONE;
-//        constraints.gridx = 1;
-//        constraints.gridy = 4;
-//        constraints.weightx = 0.3;
-//        constraints.weighty = 0.3;
-//        constraints.gridwidth = 1;
-//        constraints.anchor = GridBagConstraints.LINE_END;
-//        feePanel.add(feeLabel, constraints);
-//
-//        constraints.fill = GridBagConstraints.NONE;
-//        constraints.gridx = 3;
-//        constraints.gridy = 4;
-//        constraints.weightx = 0.3;
-//        constraints.weighty = 0.3;
-//        constraints.anchor = GridBagConstraints.LINE_START;
-//        feePanel.add(feeTextField, constraints);
-//
-//        constraints.fill = GridBagConstraints.NONE;
-//        constraints.gridx = 4;
-//        constraints.gridy = 4;
-//        constraints.weightx = 0.2;
-//        constraints.weighty = 0.3;
-//        constraints.anchor = GridBagConstraints.LINE_START;
-//        feePanel.add(feeCurrencyLabel, constraints);
-//
-//        JPanel fill1 = new JPanel();
-//        fill1.setOpaque(false);
-//        constraints.fill = GridBagConstraints.BOTH;
-//        constraints.gridx = 5;
-//        constraints.gridy = 4;
-//        constraints.weightx = 20;
-//        constraints.weighty = 1;
-//        constraints.gridwidth = 1;
-//        constraints.anchor = GridBagConstraints.LINE_END;
-//        feePanel.add(fill1, constraints);
-//
-//        return feePanel;
-//    }
 
     private JPanel createAppearancePanel(int stentWidth) {
         MultiBitTitledPanel appearancePanel = new MultiBitTitledPanel(controller.getLocaliser().getString(
@@ -874,7 +680,7 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
     }
 
     private JPanel createTickerPanel(int stentWidth) {
-        // load up the original values
+        // Load up the original values.
         originalShowTicker = !Boolean.FALSE.toString().equals(controller.getModel().getUserPreference(ExchangeModel.TICKER_SHOW));
         originalExchange1 = controller.getModel().getUserPreference(ExchangeModel.TICKER_FIRST_ROW_EXCHANGE);
         originalCurrency1 = controller.getModel().getUserPreference(ExchangeModel.TICKER_FIRST_ROW_CURRENCY);
@@ -957,19 +763,19 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
             tickerColumnsToShow = TickerTableModel.DEFAULT_COLUMNS_TO_SHOW;
         }
 
-        originalShowCurrency = tickerColumnsToShow.indexOf(TickerTableModel.TICKER_COLUMN_CURRENCY) > -1;
+        originalShowCurrency = tickerColumnsToShow.contains(TickerTableModel.TICKER_COLUMN_CURRENCY);
         showCurrency.setSelected(originalShowCurrency);
 
-        originalShowRate = tickerColumnsToShow.indexOf(TickerTableModel.TICKER_COLUMN_LAST_PRICE) > -1;
+        originalShowRate = tickerColumnsToShow.contains(TickerTableModel.TICKER_COLUMN_LAST_PRICE);
         showLastPrice.setSelected(originalShowRate);
 
-        originalShowBid = tickerColumnsToShow.indexOf(TickerTableModel.TICKER_COLUMN_BID) > -1;
+        originalShowBid = tickerColumnsToShow.contains(TickerTableModel.TICKER_COLUMN_BID);
         showBid.setSelected(originalShowBid);
 
-        originalShowAsk = tickerColumnsToShow.indexOf(TickerTableModel.TICKER_COLUMN_ASK) > -1;
+        originalShowAsk = tickerColumnsToShow.contains(TickerTableModel.TICKER_COLUMN_ASK);
         showAsk.setSelected(originalShowAsk);
 
-        originalShowExchange = tickerColumnsToShow.indexOf(TickerTableModel.TICKER_COLUMN_EXCHANGE) > -1;
+        originalShowExchange = tickerColumnsToShow.contains(TickerTableModel.TICKER_COLUMN_EXCHANGE);
         showExchange.setSelected(originalShowExchange);
 
         constraints.fill = GridBagConstraints.HORIZONTAL;
@@ -1201,7 +1007,7 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
                         }
                     }
                     
-                    // Enable the OpenExchangeRates App ID if required
+                    // Enable the OpenExchangeRates App ID if required.
                     boolean showOER = ExchangeData.OPEN_EXCHANGE_RATES_EXCHANGE_NAME.equalsIgnoreCase(exchangeShortName) ||  
                             ExchangeData.OPEN_EXCHANGE_RATES_EXCHANGE_NAME.equalsIgnoreCase((String) exchangeComboBox2.getSelectedItem());
                     oerStent.setVisible(showOER); 
@@ -1317,7 +1123,7 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
                         }
                     }
                     
-                    // Enable the OpenExchangeRates App ID if required
+                    // Enable the OpenExchangeRates App ID if required.
                     boolean showOER = ExchangeData.OPEN_EXCHANGE_RATES_EXCHANGE_NAME.equalsIgnoreCase(exchangeShortName) ||  
                             ExchangeData.OPEN_EXCHANGE_RATES_EXCHANGE_NAME.equalsIgnoreCase((String) exchangeComboBox1.getSelectedItem());
                     oerStent.setVisible(showOER); 
@@ -1455,7 +1261,6 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
         oerApiCodeTextField.setVisible(showOerSignup);
         oerApiCodeTextField.setText(originalOERApiCode);
         oerApiCodeTextField.addFocusListener(new FocusListener() {
-
             @Override
             public void focusGained(FocusEvent arg0) {               
             }
@@ -1664,13 +1469,34 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
 
         GridBagConstraints constraints = new GridBagConstraints();
 
-        buttonPanel
-                .setBorder(BorderFactory.createCompoundBorder(
-                        BorderFactory.createMatteBorder(1, 0, 0, 0, SystemColor.windowBorder),
-                        BorderFactory.createEmptyBorder(2, 0, 2, 0)));
+        buttonPanel.setBorder(BorderFactory.createMatteBorder(1, 0, 0, 0, SystemColor.windowBorder));
         buttonPanel.setOpaque(true);
-        buttonPanel.setBackground(ColorAndFontConstants.BACKGROUND_COLOR);
+        buttonPanel.setBackground(ColorAndFontConstants.MID_BACKGROUND_COLOR);
         buttonPanel.setComponentOrientation(ComponentOrientation.getOrientation(controller.getLocaliser().getLocale()));
+
+        Action helpAction;
+        if (ComponentOrientation.LEFT_TO_RIGHT == ComponentOrientation.getOrientation(controller.getLocaliser().getLocale())) {
+            helpAction = new HelpContextAction(controller, ImageLoader.HELP_CONTENTS_BIG_ICON_FILE,
+                    "multiBitFrame.helpMenuText", "multiBitFrame.helpMenuTooltip", "multiBitFrame.helpMenuText",
+                    HelpContentsPanel.HELP_PREFERENCES_URL);
+        } else {
+            helpAction = new HelpContextAction(controller, ImageLoader.HELP_CONTENTS_BIG_RTL_ICON_FILE,
+                    "multiBitFrame.helpMenuText", "multiBitFrame.helpMenuTooltip", "multiBitFrame.helpMenuText",
+                    HelpContentsPanel.HELP_PREFERENCES_URL);
+        }
+        HelpButton helpButton = new HelpButton(helpAction, controller);
+        helpButton.setText("");
+        helpButton.setToolTipText(controller.getLocaliser().getString("multiBitFrame.helpMenuTooltip"));
+        helpButton.setHorizontalAlignment(SwingConstants.LEADING);
+        constraints.fill = GridBagConstraints.HORIZONTAL;
+        constraints.gridx = 0;
+        constraints.gridy = 0;
+        constraints.weightx = 0.3;
+        constraints.weighty = 0.1;
+        constraints.gridwidth = 1;
+        constraints.gridheight = 1;
+        constraints.anchor = GridBagConstraints.LINE_START;
+        buttonPanel.add(helpButton, constraints);
 
         ShowPreferencesSubmitAction submitAction = new ShowPreferencesSubmitAction(this.bitcoinController, this.exchangeController, this,
                 ImageLoader.createImageIcon(ImageLoader.PREFERENCES_ICON_FILE), mainFrame);
@@ -1684,31 +1510,31 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
         buttonPanel.add(undoChangesButton);
 
         constraints.fill = GridBagConstraints.NONE;
-        constraints.gridx = 0;
-        constraints.gridy = 0;
-        constraints.weightx = 0.1;
-        constraints.weighty = 1.0;
-        constraints.gridwidth = 1;
-        constraints.gridheight = 1;
-        constraints.anchor = GridBagConstraints.CENTER;
-        buttonPanel.add(submitButton, constraints);
-
-        constraints.fill = GridBagConstraints.NONE;
         constraints.gridx = 1;
         constraints.gridy = 0;
         constraints.weightx = 0.1;
         constraints.weighty = 1.0;
         constraints.gridwidth = 1;
         constraints.gridheight = 1;
-        constraints.anchor = GridBagConstraints.CENTER;
+        constraints.anchor = GridBagConstraints.LINE_START;
+        buttonPanel.add(submitButton, constraints);
+
+        constraints.fill = GridBagConstraints.NONE;
+        constraints.gridx = 2;
+        constraints.gridy = 0;
+        constraints.weightx = 0.1;
+        constraints.weighty = 1.0;
+        constraints.gridwidth = 1;
+        constraints.gridheight = 1;
+        constraints.anchor = GridBagConstraints.LINE_START;
         buttonPanel.add(undoChangesButton, constraints);
 
         JPanel fill1 = new JPanel();
         fill1.setOpaque(false);
-        constraints.fill = GridBagConstraints.BOTH;
+        constraints.fill = GridBagConstraints.HORIZONTAL;
         constraints.gridx = 2;
         constraints.gridy = 0;
-        constraints.weightx = 20;
+        constraints.weightx = 200;
         constraints.weighty = 1;
         constraints.gridwidth = 1;
         constraints.gridheight = 1;
@@ -1816,7 +1642,7 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
         }
     }
 
-    class LanguageData implements Comparable<LanguageData> {
+    static class LanguageData implements Comparable<LanguageData> {
         public String languageCode;
         public String language;
         public ImageIcon image;
@@ -1853,7 +1679,6 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
     }
     
     public void setSelectedFont(Font selectedFont) {
-        //log.debug("setSelectedFont called");
         this.selectedFont = selectedFont;
 
         fontNameTextLabel.setText(selectedFont.getFamily());
@@ -1911,23 +1736,6 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
     public String getPreviousUndoChangesText() {
         return controller.getLocaliser().getString("undoPreferencesChangesSubmitAction.text");
     }
-
-//    @Override
-//    public String getPreviousSendFee() {
-//        return originalFee;
-//    }
-//
-//    @Override
-//    public String getNewSendFee() {
-//        CurrencyConverterResult converterResult = CurrencyConverter.INSTANCE.parseToBTC(feeTextField.getText());
-//        if (converterResult.isBtcMoneyValid()) {
-//            return controller.getLocaliser().bitcoinValueToStringNotLocalised(
-//                    converterResult.getBtcMoney().getAmount().toBigInteger(), false, false);
-//        } else {
-//            // Return UNPARSEABLE for the action to deal with it.
-//            return ShowPreferencesPanel.UNPARSEABLE_FEE + " " + feeTextField.getText();
-//        }
-//    }
     
     @Override
     public String getPreviousOpenExchangeRatesApiCode() {
@@ -1954,9 +1762,8 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
             if (selectedLanguageIndex != null) {
                 int loopIndex = 0;
                 for (LanguageData languageData : languageDataSet) {
-                    if (selectedLanguageIndex.intValue() == loopIndex) {
-                        String newLanguageCode = languageData.languageCode;
-                        return newLanguageCode;
+                    if (selectedLanguageIndex == loopIndex) {
+                        return languageData.languageCode;
                     }
                     loopIndex++;
                 }
@@ -1967,7 +1774,7 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
 
     @Override
     public String getOpenUriDialog() {
-        return (new Boolean((askEveryTime.isSelected()))).toString();
+        return (Boolean.valueOf((askEveryTime.isSelected()))).toString();
     }
 
     @Override
@@ -1976,7 +1783,7 @@ public class ShowPreferencesPanel extends JPanel implements Viewable, Preference
         if (ignoreAll.isSelected()) {
             useUri = false;
         }
-        return (new Boolean(useUri)).toString();
+        return (Boolean.valueOf(useUri)).toString();
     }
 
     @Override
